Actualiza index.html para corregir rutas de navegación

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <base href="https://directoryofsites.github.io/contenedor/" />
+    <!-- Removida la etiqueta base para evitar problemas con rutas -->
     <title>Sistema Explorador - Contenedor Documentos</title>
     <style>
         body, html {
@@ -80,7 +80,7 @@
             <p style="text-align: center;">Sistema de gestión de archivos con diferentes niveles de acceso.</p>
             
             <div class="buttons">
-                <a href="./frontend/build/index.html" class="btn">Acceder a la Aplicación</a>
+                <a href="/contenedor/frontend/build/index.html" class="btn">Acceder a la Aplicación</a>
                 <a href="https://contenedor-production-3606.up.railway.app/" class="btn" id="api-url" target="_blank">Verificar API</a>
             </div>
             
