Forzar nuevo despliegue de GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <!DOCTYPE html><html lang="es"><head><meta charset="UTF-8"><title>Explorador de Archivos</title><link rel="stylesheet" href="/contenedor/static/css/main.c314deff.css"></head><body><div id="root">Cargando...</div><script src="/contenedor/static/js/main.752cb559.js"></script></body></html> 
+"<!-- Forzar actualizaci¢n: $(date) -->" 
