Configuración inicial para proyecto Master

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<!DOCTYPE html><html lang="es"><head><meta charset="UTF-8"><title>Gracia y Vida</title><link rel="stylesheet" href="/Gracia_y_Vida/static/css/main.c314deff.css"></head><body><div id="root">Cargando...</div><script src="/Gracia_y_Vida/static/js/main.752cb559.js"></script></body></html> 
+<!DOCTYPE html><html lang="es"><head><meta charset="UTF-8"><title>Master</title><link rel="stylesheet" href="/master/static/css/main.c314deff.css"></head><body><div id="root">Cargando...</div><script src="/master/static/js/main.752cb559.js"></script></body></html> 
 "<!-- Forzar actualizaci¢n: $(date) -->"
